--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <!-- 嵌入 PDF 文件 -->
         <div class="pdf-container">
-            <embed src="docs/resume.pdf" type="application/pdf" width="100%" height="600px">
+            <embed src="docs/202200130260_张汶煜_实验三.pdf" type="application/pdf" width="100%" height="600px">
         </div>
 
         <!-- 如果浏览器不支持嵌入，显示下载链接 -->
