--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <!-- 如果浏览器不支持嵌入，显示下载链接 -->
         <p style="text-align: center;">
-            如果无法显示 PDF 文件，请 <a href="docs/resume.pdf" target="_blank">点击这里下载</a>。
+            如果无法显示 PDF 文件，请 <a href="docs/202200130260_张汶煜_实验三.[df" target="_blank">点击这里下载</a>。
         </p>
     </main>
 
